--- a/views/components/toolbar/accountSidebar.pug
+++ b/views/components/toolbar/accountSidebar.pug
@@ -1,8 +1,8 @@
 include ../list/iconElementList
 include ../icon/iconElement
 
-.account-sidebar.sidebar.-closed
-    .sidebar__title Account
+nav.account-sidebar.sidebar.-closed
+    h2.sidebar__title Account
     if loginUser
         - let icon = icons.profileIcon
         
