--- a/views/layouts/logging.pug
+++ b/views/layouts/logging.pug
@@ -2,6 +2,6 @@ extends root
 
 block content
     .page-container
-        .logging-page
+        main.logging-page
             .logging-page__container
                 block loggingForm
