--- a/views/layouts/toolbars.pug
+++ b/views/layouts/toolbars.pug
@@ -1,7 +1,7 @@
 extends root
 
 block content
-    .navbar
+    nav.navbar
         block navbar
     .navbar-dropdown-container.-gone
     .page-container
