--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -4,5 +4,5 @@ include ../components/grid/blogPostGrid
 block page
   - const { blogPosts } = data
 
-  .index-page
+  main.index-page
     +blogPostGrid(blogPosts)
