--- a/public/stylesheets/views/components/card/_blog-post-card.scss
+++ b/public/stylesheets/views/components/card/_blog-post-card.scss
@@ -4,10 +4,12 @@
 @use '../../../mixins/text-cutoff';
 
 .blog-post-card {
-    display: flex;
-    width: 30rem;
-    height: 20rem;
-    border: 2px solid colors.$bg2;
+    &__article {
+        display: flex;
+        width: 30rem;
+        height: 20rem;
+        border: 2px solid colors.$bg2;
+    }
 
     &__stat-list {
         display: flex;
@@ -23,6 +25,7 @@
     &__overlay {
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         gap: 1rem;
         height: 100%;
         width: 100%;
@@ -34,14 +37,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
-
-    &__content-overview {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 100%;
-        gap: 1rem;
+        margin-bottom: 1rem;
     }
 
     &__title {
@@ -73,9 +69,11 @@
     }
 
     &.-small {
-        height: 16rem;
-        width: 24rem;
-
+        .blog-post-card__article {
+            height: 16rem;
+            width: 24rem;
+        }
+        
         .blog-post-card__stat-list {
             padding: 0.5rem;
         }
