--- a/views/components/list/blogPostList.pug
+++ b/views/components/list/blogPostList.pug
@@ -5,81 +5,90 @@ mixin blogPostList(blogPosts, attrs={})
     ul.blog-post-list&attributes(attrs)
         each blogPost in blogPosts
             li.blog-post-item(id=blogPost._id)
-                .blog-post-item__top 
-                    .blog-post-item__title= blogPost.title
-                    .blog-post-item__date-group
-                        .blog-post-item__published= `Published: ${blogPost.publish_date}`
-                        .blog-post-item__last-modified= `Last modified: ${blogPost.last_modified_date}`
-                .blog-post-item__bottom
-                    - const likes = blogPost.likes
-                    - const dislikes = blogPost.dislikes 
-                    - const totalComments = blogPost.comments.length
-                        
-                    +iconElementList(
-                        [{
-                            'tag': 'div',
-                            'icon': icons.likeIcon,
-                            'label': likes,
-                            'attrs': {
-                                'class': 'blog-post-item__likes'
-                            }
-                        },
-                        {
-                            'tag': 'div',
-                            'icon': icons.dislikeIcon,
-                            'label': dislikes,
-                            'attrs': {
-                                'class': 'blog-post-item__dislikes'
-                            }
-                        },
-                        {
-                            'tag': 'div',
-                            'icon': icons.commentIcon,
-                            'label': totalComments,
-                            'attrs': {
-                                'class': 'blog-post-item__total-comments'
-                            }
-                        }],
-                        {
-                            'iconElementList': {
-                                'class': [
-                                    '-gap-medium'
-                                ]
+                article.blog-post-item__article
+                    header.blog-post-item__top 
+                        .blog-post-item__title= blogPost.title
+                        .blog-post-item__date-group
+                            .blog-post-item__published
+                                | Published: 
+                                time(
+                                    datetime=blogPost.publish_date
+                                )= blogPost.publish_date
+                            .blog-post-item__last-modified
+                                | Last modified: 
+                                time(
+                                    datetime=blogPost.last_modified_date
+                                )= blogPost.last_modified_date
+                    section.blog-post-item__bottom
+                        - const likes = blogPost.likes
+                        - const dislikes = blogPost.dislikes 
+                        - const totalComments = blogPost.comments.length
+                            
+                        +iconElementList(
+                            [{
+                                'tag': 'div',
+                                'icon': icons.likeIcon,
+                                'label': likes,
+                                'attrs': {
+                                    'class': 'blog-post-item__likes'
+                                }
                             },
-                            'iconElement': {
-                                'class': [
-                                    '-small',
-                                    '-gap-small',
-                                    '-avatar'
-                                ]
-                            }
-                        }
-                    )
-                    .blog-post-item__actions
-                        +iconElement(
-                            'a',
-                            icons.editIcon,
-                            null,
                             {
-                                'href': `/users/${loginUser.username}/blog-posts/${blogPost._id}`,
-                                'class': [
-                                    '-small',
-                                    '-button',
-                                    '-colorful', 
-                                    '-padding-even-slim'
-                                ]
+                                'tag': 'div',
+                                'icon': icons.dislikeIcon,
+                                'label': dislikes,
+                                'attrs': {
+                                    'class': 'blog-post-item__dislikes'
+                                }
+                            },
+                            {
+                                'tag': 'div',
+                                'icon': icons.commentIcon,
+                                'label': totalComments,
+                                'attrs': {
+                                    'class': 'blog-post-item__total-comments'
+                                }
+                            }],
+                            {
+                                'iconElementList': {
+                                    'class': [
+                                        '-gap-medium'
+                                    ]
+                                },
+                                'iconElement': {
+                                    'class': [
+                                        '-small',
+                                        '-gap-small',
+                                        '-avatar'
+                                    ]
+                                }
                             }
                         )
-                        +iconElement(
-                            'button',
-                            icons.deleteIcon,
-                            null,
-                            {
-                                'class': [
-                                    'blog-post-item__delete-button',
-                                    '-small',
-                                    '-colorful',
-                                    '-padding-even-slim'
-                                ]
-                            }
-                        )
+                        .blog-post-item__actions
+                            +iconElement(
+                                'a',
+                                icons.editIcon,
+                                null,
+                                {
+                                    'href': `/users/${loginUser.username}/blog-posts/${blogPost._id}`,
+                                    'class': [
+                                        '-small',
+                                        '-button',
+                                        '-colorful', 
+                                        '-padding-even-slim'
+                                    ]
+                                }
+                            )
+                            +iconElement(
+                                'button',
+                                icons.deleteIcon,
+                                null,
+                                {
+                                    'class': [
+                                        'blog-post-item__delete-button',
+                                        '-small',
+                                        '-colorful',
+                                        '-padding-even-slim'
+                                    ]
+                                }
+                            )
